--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Binary files 
+VoronoiProto/bin/
+VoronoiProto/obj/
+
 # =========================
 # Operating System Files
 # =========================
@@ -41,3 +45,5 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.pdb
+*.exe
